--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>wippy</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
